changed dynamic colour sass, fixed alignment, fixed icons

--- a/src/assets/css/theme-colors.scss
+++ b/src/assets/css/theme-colors.scss
@@ -3,12 +3,16 @@
 :root {
     // --app-background-color: #FFFFFF;
     --app-background-color: #f2f6fa;
-    --dynamic-title-color: #363636;
+    --dynamic-title-color: #4a4a4a;
     --dynamic-subtitle-color: #4a4a4a;
+    --dynamic-border-color: #4a4a4a;
 }
 
 [theme="dark"] {
     --app-background-color: #141d26;
-    --dynamic-title-color: #FFFFFF;
-    --dynamic-subtitle-color: cyan;
+    --dynamic-title-color: #b9f9fa;
+    --dynamic-subtitle-color: #b9f9fa;
+    --dynamic-border-color: #b9f9fa;
+    // --dynamic-subtitle-color: cyan;
+    // --dynamic-border-color: cyan;
 }
